fix styleing on firefox

--- a/weather.css
+++ b/weather.css
@@ -45,6 +45,7 @@ div {
 
 #city-input {
   border: none;
+  width: 200px;
   height: 30px;
   font-size: 1.2rem;
 }
